# prisma_asistencia_tutoras

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: base.yaml  dev.yaml  prod.yaml
plantillas/: plantilla_comite.pptx
scripts/: create_db.py  schema.sql  seed_demo_asistencias.sql
scripts/asistencia/: GUIA.html  README.md  cargar_estandar.sql  consolidados.sql  schema_asistencia.sql
src/asistencia_nucleo/: README.md
src/asistencia_nucleo/adapters/extractores/: _zoom_common.py  (+4 more)
src/asistencia_nucleo/application/: construir_estandar.py  exportar_json.py  extraer.py  renderizar.py
src/asistencia_nucleo/domain/: dedup.py  duracion.py  estados.py  estandar.py  matcher.py  modelos.py  normalizar.py
src/asistencia_nucleo/entrypoints/: cli.py
src/asistencia_nucleo/ports/: extraccion.py  salida.py
src/asistencia_nucleo/shared/: config.py  logger.py
src/student_service/: main_api.py  main_worker.py
src/student_service/adapters/: lectores_csv.py  sqlite_repo.py
src/student_service/application/: casos_uso.py
src/student_service/domain/: asistencia.py  calificaciones.py  encuesta.py
src/student_service/entrypoints/: api.py  cli.py  worker.py
src/student_service/ports/: lectores.py  render.py  repositorio.py
src/student_service/shared/: config.py  logger.py  shutdown.py
tests/asistencia_nucleo/: conftest.py  test_arquitectura.py  test_construir_estandar.py  test_estados_matcher.py  test_extractores.py  test_modelos_estandar.py
tests/student_service/: test_arquitectura.py  test_domain.py
(+5 files in other folders)
