[project]
name = "student-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Jeronimo114",email = "jeronimomartinezjaramillo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.50.2,<0.51.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "python-pptx (>=1.0.2,<2.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)"
]

[project.scripts]
reporte = "student_service.entrypoints.cli:main"
nucleo = "asistencia_nucleo.entrypoints.cli:main"

[tool.poetry]
packages = [
    {include = "student_service", from = "src"},
    {include = "asistencia_nucleo", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff (>=0.15.20,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "black (>=26.5.1,<27.0.0)"
]
